--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,11 +4,36 @@
   font-size: 24px;
   line-height: 1.17;
   color: #FFFFFF;
+  text-decoration: none;
+  margin-top: 46px;
+  margin-right: 18px;
+  width: 30px;
+}
+
+.header__lang-link:nth-child { 
+  margin-right: 48px;
+  width: 29px;
+}
+
+@media screen and (max-width: 1023px) {
+  .header__lang-link:nth-child {
+    margin-right: 24px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 1.11;
+    margin-top: 30px;
+    width: 22px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .header__lang-link:nth-child {   
+    margin-right: 16px;     
+  }
+}
+
+
